--- a/xmart-frontend/pom.xml
+++ b/xmart-frontend/pom.xml
@@ -87,6 +87,13 @@
             <artifactId>asciitable</artifactId>
             <version>0.3.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>25-ea+2</version>
+        </dependency>
+
         <dependency>
             <groupId>edu.ezip.ing1.pds.client.commons</groupId>
             <artifactId>xmart-city-client-commons</artifactId>
